5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4057/executions/1684_1872.log
== TEST (2019-05-02 22:12:16) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("X: "))
y = float(input("Y: "))

if (x == 0 and y == 0):
	print("Origem")
elif (x == 0) and ((y > 0)or (y < 0)):
	print("Eixo Y")
elif ((x > 0) or (x < 0)) and (y == 0):
	print("Eixo X")
elif (x > 0) and  (y > 0):
	print("Q1")
elif (x > o) and (y < 0):
	print("Q2")
elif (x < 0) and (y < 0):
	print("Q3")
elif (x < 0) and (y > 0):
	print("Q4")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    elif (x > o) and (y < 0):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 22:12:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("X: "))
y = float(input("Y: "))

if (x == 0 and y == 0):
	print("Origem")
elif (x == 0) and ((y > 0)or (y < 0)):
	print("Eixo Y")
elif ((x > 0) or (x < 0)) and (y == 0):
	print("Eixo X")
elif (x > 0) and  (y > 0):
	print("Q1")
elif (x > o) and (y < 0):
	print("Q2")
elif (x < 0) and (y < 0):
	print("Q3")
elif (x < 0) and (y > 0):
	print("Q4")
-- EXECUTION TIME:
0.206604
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1684/1872/main.py", line 13, in <module>
    elif (x > o) and (y < 0):
NameError: name 'o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:14:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))

if (x == 0 and y == 0):
	print("Origem")
elif (x == 0) and ((y > 0)or (y < 0)):
	print("Eixo Y")
elif ((x > 0) or (x < 0)) and (y == 0):
	print("Eixo X")
elif (x > 0) and  (y > 0):
	print("Q1")
elif (x > o) and (y < 0):
	print("Q2")
elif (x < 0) and (y < 0):
	print("Q3")
elif (x < 0) and (y > 0):
	print("Q4")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    elif (x > o) and (y < 0):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 22:14:15) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))

if (x == 0 and y == 0):
	print("Origem")
elif (x == 0) and ((y > 0)or (y < 0)):
	print("Eixo Y")
elif ((x > 0) or (x < 0)) and (y == 0):
	print("Eixo X")
elif (x > 0) and  (y > 0):
	print("Q1")
elif (x > o) and (y < 0):
	print("Q2")
elif (x < 0) and (y < 0):
	print("Q3")
elif (x < 0) and (y > 0):
	print("Q4")
-- EXECUTION TIME:
0.200899
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1684/1872/main.py", line 13, in <module>
    elif (x > o) and (y < 0):
NameError: name 'o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 22:15:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))

if (x > 0) and  (y > 0):
	print("Q1")
elif (x > o) and (y < 0):
	print("Q2")
elif (x < 0) and (y < 0):
	print("Q3")
elif (x < 0) and (y > 0):
	print("Q4")
elif ((x > 0) or (x < 0)) and (y == 0):
	print("Eixo X")
elif (x == 0) and ((y > 0)or (y < 0)):
	print("Eixo Y")
if (x == 0 and y == 0):
	print("Origem")
-- EXECUTION TIME:
0.163513
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1684/1872/main.py", line 7, in <module>
    elif (x > o) and (y < 0):
NameError: name 'o' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:15:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))

if (x > 0) and  (y > 0):
	print("Q1")
elif (x > o) and (y < 0):
	print("Q2")
elif (x < 0) and (y < 0):
	print("Q3")
elif (x < 0) and (y > 0):
	print("Q4")
elif ((x > 0) or (x < 0)) and (y == 0):
	print("Eixo X")
elif (x == 0) and ((y > 0)or (y < 0)):
	print("Eixo Y")
if (x == 0 and y == 0):
	print("Origem")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    elif (x > o) and (y < 0):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:16:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))

if (x > 0) and  (y > 0):
	print("Q1")
elif (x > o) and (y < 0):
	print("Q2")
elif (x < 0) and (y < 0):
	print("Q3")
elif (x < 0) and (y > 0):
	print("Q4")
elif ((x > 0) or (x < 0)) and (y == 0):
	print("Eixo X")
elif (x == 0) and ((y > 0)or (y < 0)):
	print("Eixo Y")
if (x == 0 and y == 0):
	print("Origem")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    elif (x > o) and (y < 0):
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 22:16:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))

if (x > 0) and  (y > 0):
	print("Q1")
elif (x > 0) and (y < 0):
	print("Q2")
elif (x < 0) and (y < 0):
	print("Q3")
elif (x < 0) and (y > 0):
	print("Q4")
elif ((x > 0) or (x < 0)) and (y == 0):
	print("Eixo X")
elif (x == 0) and ((y > 0)or (y < 0)):
	print("Eixo Y")
if (x == 0 and y == 0):
	print("Origem")
-- EXECUTION TIME:
0.116533
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q2
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:16:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))

if (x > 0) and  (y > 0):
	print("Q1")
elif (x > 0) and (y < 0):
	print("Q2")
elif (x < 0) and (y < 0):
	print("Q3")
elif (x < 0) and (y > 0):
	print("Q4")
elif ((x > 0) or (x < 0)) and (y == 0):
	print("Eixo X")
elif (x == 0) and ((y > 0)or (y < 0)):
	print("Eixo Y")
if (x == 0 and y == 0):
	print("Origem")
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:17:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))

if (x > 0) and  (y > 0):
	print("Q1")
elif (x > 0) and (y < 0):
	print("Q2")
elif (x < 0) and (y < 0):
	print("Q3")
elif (x < 0) and (y > 0):
	print("Q4")
elif ((x > 0) or (x < 0)) and (y == 0):
	print("Eixo X")
elif (x == 0) and ((y > 0)or (y < 0)):
	print("Eixo Y")
if (x == 0 and y == 0):
	print("Origem")
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:17:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))

if (x > 0) and  (y > 0):
	print("Q1")
elif (x > 0) and (y < 0):
	print("Q2")
elif (x < 0) and (y < 0):
	print("Q3")
elif (x < 0) and (y > 0):
	print("Q4")
elif ((x > 0) or (x < 0)) and (y == 0):
	print("Eixo X")
elif (x == 0) and ((y > 0)or (y < 0)):
	print("Eixo Y")
if (x == 0 and y == 0):
	print("Origem")
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:17:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))

if (x > 0) and  (y > 0):
	print("Q1")
elif (x > 0) and (y < 0):
	print("Q2")
elif (x < 0) and (y < 0):
	print("Q3")
elif (x < 0) and (y > 0):
	print("Q4")
elif ((x > 0) or (x < 0)) and (y == 0):
	print("Eixo X")
elif (x == 0) and ((y > 0)or (y < 0)):
	print("Eixo Y")
if (x == 0 and y == 0):
	print("Origem")
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 22:17:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))

if (x > 0) and  (y > 0):
	print("Q1")
elif (x > 0) and (y < 0):
	print("Q2")
elif (x < 0) and (y < 0):
	print("Q3")
elif (x < 0) and (y > 0):
	print("Q4")
elif ((x > 0) or (x < 0)) and (y == 0):
	print("Eixo X")
elif (x == 0) and ((y > 0)or (y < 0)):
	print("Eixo Y")
if (x == 0 and y == 0):
	print("Origem")
-- OUTPUT:
Q2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 22:19:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("x: "))
y = float(input("y: "))

if (x > 0) and  (y > 0):
	print("Q1")
elif (x > 0) and (y < 0):
	print("Q4")
elif (x < 0) and (y < 0):
	print("Q3")
elif (x < 0) and (y > 0):
	print("Q2")
elif ((x > 0) or (x < 0)) and (y == 0):
	print("Eixo X")
elif (x == 0) and ((y > 0)or (y < 0)):
	print("Eixo Y")
if (x == 0 and y == 0):
	print("Origem")
-- EXECUTION TIME:
0.197871
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
